fixed vertical alignment for li in ul

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -111,6 +111,7 @@ header {
 }
 
 header ul {
+  list-style: none;
   height:50px;
   padding:0;
   display: table;
@@ -121,7 +122,7 @@ header li {
   width:89px;
   float:left;
   border-right:1px solid #e0e0e0;
-  height:50px;
+  height:inherit;;
 }
 
 
@@ -129,14 +130,15 @@ header ul a {
   font-size:16px;
   color:#393939;
   display: table-cell;
-  vertical-align: middle;
+  vertical-align: middle;;
   text-align:center;
   line-height: 1.2;
   padding-top:8px;
   padding-left: 1px;
-  padding-right: 1px
+  padding-right: 1px;
   padding-bottom: 8px;
-  height:50px;
+  width: inherit;
+  height: inherit;
 }
 
 header ul a:hover {
